--- a/notebook/Kidney-implementation.ipynb
+++ b/notebook/Kidney-implementation.ipynb
@@ -2182,7 +2182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -2194,7 +2194,7 @@
       "Best Parameters: {'C': 100, 'max_iter': 300}\n",
       "Training and tuning Decision Tree...\n",
       "Decision Tree Accuracy: 0.9750\n",
-      "Best Parameters: {'criterion': 'gini', 'max_depth': 3, 'min_samples_split': 10}\n",
+      "Best Parameters: {'criterion': 'gini', 'max_depth': 3, 'min_samples_split': 5}\n",
       "Training and tuning Random Forest...\n",
       "Random Forest Accuracy: 0.9750\n",
       "Best Parameters: {'criterion': 'gini', 'max_depth': None, 'min_samples_split': 2, 'n_estimators': 50}\n",
@@ -2304,8 +2304,7 @@
     "# Save the best performing model\n",
     " # Best trained model ko save karo\n",
     "import pickle\n",
-    "with open(\"kidney.pkl\", \"wb\") as file:\n",
-    "    pickle.dump(best_model, file)\n",
+    "joblib.dump(best_model, \"kidney.pkl\")\n",
     "print(f\"\\n✅ Best Model: {best_model_name} with Accuracy: {best_accuracy:.4f}\")\n",
     "print(\"Best model saved as best_model.pkl!\")"
    ]
